Source/WebKit2/WebProcess/WebCoreSupport/efl/WebFrameNetworkingContext.h
@@ -26,18 +26,20 @@
 #ifndef WebFrameNetworkingContext_h
 #define WebFrameNetworkingContext_h
 
+#include "WebFrame.h"
+
 #include <WebCore/FrameNetworkingContext.h>
 
 class WebFrameNetworkingContext : public WebCore::FrameNetworkingContext {
 public:
-    static PassRefPtr<WebFrameNetworkingContext> create(WebCore::Frame*)
+    static PassRefPtr<WebFrameNetworkingContext> create(WebKit::WebFrame*)
     {
         return 0;
     }
 
 private:
-    WebFrameNetworkingContext(WebCore::Frame* frame)
-        : WebCore::FrameNetworkingContext(frame)
+    WebFrameNetworkingContext(WebKit::WebFrame* frame)
+        : WebCore::FrameNetworkingContext(frame->coreFrame())
     {
     }
 
